# internal/api/server.go
@@ -73,6 +73,7 @@ func (s *Server) Handler() http.Handler {
 		s.spanEnrichMiddleware(),
 	)
 	v1.GET("/graph", s.handleGraph)
+	v1.GET("/storage-graph", s.handleStorageGraph)
 	v1.GET("/edge-types", s.handleEdgeTypes)
 
 	r.GET("/livez", s.handleLivez)
